[package]
name = "bot-discord"
version = "0.1.0"
authors = ["LSASSE <louis.sasse@ynov.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }